cmake_minimum_required(VERSION 2.8)
project(libcorpc_all)

add_subdirectory(co)
add_subdirectory(corpc)
add_subdirectory(corpc_memcached)
add_subdirectory(corpc_mongodb)
add_subdirectory(corpc_mysql)
add_subdirectory(corpc_redis)
add_subdirectory(example/example_echoTcp)
add_subdirectory(example/example_echoUdp)
add_subdirectory(example/example_innerRpc)
add_subdirectory(example/example_interRpc)
add_subdirectory(example/example_memcached)
add_subdirectory(example/example_mongodb)
add_subdirectory(example/example_mysql)
add_subdirectory(example/example_redis)
add_subdirectory(tutorial/tutorial1)
add_subdirectory(tutorial/tutorial2)
add_subdirectory(tutorial/tutorial3)
add_subdirectory(tutorial/tutorial4)
add_subdirectory(tutorial/tutorial5)